new: facebook login, but no test. wifidog/wifidog-auth-laravel#3

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,8 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=sqlite
+
+FACEBOOK_APP_ID=
+FACEBOOK_APP_SECRET=
+FACEBOOK_OAUTH_REDIRECT_URI="http://wifidog-auth.lan/login/facebook/callback"
+SOCIAL_LOGIN_PROVIDERS=
