--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "tymon/jwt-auth": "^0.5.12"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.4",
         "fzaninotto/faker": "^1.6",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.7",
