--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
-APP_NAME=Laravel
+APP_NAME="Wifidog Auth"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://wifidog-auth.lan
+
+LOG_CHANNEL=stack
 
 DB_CONNECTION=sqlite
 
