--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,12 @@
 /storage/*.key
 /vendor
 /.idea
+/.vscode
 /.vagrant
 Homestead.json
 Homestead.yaml
+npm-debug.log
+yarn-error.log
 .env
 .env.testing
 .phpstorm.meta.php
