--- a/composer.json
+++ b/composer.json
@@ -5,25 +5,29 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
-        "doctrine/dbal": "^2.5",
-        "laravel/framework": "5.4.*",
+        "php": "^7.1.3",
+        "doctrine/dbal": "^2.7",
+        "fideloper/proxy": "^4.0",
+        "laravel/framework": "5.6.*",
         "laravel/meta": "^3.1",
         "laravel/socialite": "^3.0",
-        "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.4",
+        "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.6",
         "tymon/jwt-auth": "^0.5.12"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.4",
-        "fzaninotto/faker": "^1.6",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7",
-        "squizlabs/php_codesniffer": "^3.0"
+        "filp/whoops": "^2.0",
+        "fzaninotto/faker": "^1.4",
+        "mockery/mockery": "^1.0",
+        "nunomaduro/collision": "^2.0",
+        "phpunit/phpunit": "^7.0",
+        "squizlabs/php_codesniffer": "^3.3"
     },
     "autoload": {
         "classmap": [
-            "database"
+            "database/seeds",
+            "database/factories"
         ],
         "psr-4": {
             "App\\": "app/"
@@ -34,25 +38,29 @@
             "Tests\\": "tests/"
         }
     },
+    "extra": {
+        "laravel": {
+            "dont-discover": [
+            ]
+        }
+    },
     "scripts": {
         "post-root-package-install": [
-            "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "php artisan key:generate"
+            "@php artisan key:generate"
         ],
-        "post-install-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan optimize"
-        ],
-        "post-update-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "php artisan optimize"
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover"
         ]
     },
     "config": {
         "preferred-install": "dist",
         "sort-packages": true,
         "optimize-autoloader": true
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
