--- a/composer.json
+++ b/composer.json
@@ -6,17 +6,17 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
-        "doctrine/dbal": "^2.7",
+        "doctrine/dbal": "^2.8",
+        "eusonlito/laravel-meta": "^3.1",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.6.*",
-        "laravel/meta": "^3.1",
-        "laravel/socialite": "^3.0",
+        "laravel/framework": "5.7.*",
+        "laravel/socialite": "^3.1",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.6",
         "tymon/jwt-auth": "^0.5.12"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^2.4",
+        "barryvdh/laravel-ide-helper": "^2.5",
+        "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
