--- a/apache2/sites-enabled/wifidog-auth.conf
+++ b/apache2/sites-enabled/wifidog-auth.conf
@@ -1,5 +1,6 @@
 <VirtualHost *:80>
     ServerName wifidog-auth.lan
+    ServerAlias wifidog-auth.localhost
     DocumentRoot /var/www/wifidog-auth-laravel/public
 
     ErrorLog /var/log/apache2/error.log
