--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         "eusonlito/laravel-meta": "^3.1",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
-        "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0",
+        "sinkcup/laravel-make-auth-socialite": "^4.0",
         "tymon/jwt-auth": "1.0.0-rc4.1"
     },
     "require-dev": {
