--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,14 +2,31 @@ version: 2 # use CircleCI 2.0
 
 jobs: # a collection of steps
   build: # runs not using Workflows must have a `build` job as entry point
-    docker: # run the steps with Docker 
-      - image: circleci/php:7.1-node-browsers # ...with this image as the primary container; this is where all `steps` will run
+    docker: # run the steps with Docker
+      - image: circleci/php:7.3-node-browsers # ...with this image as the primary container; this is where all `steps` will run
+      - image: circleci/mysql:8.0
+        command: [--default-authentication-plugin=mysql_native_password]
+        environment:
+          MYSQL_DATABASE: forge
+          MYSQL_USER: forge
+          MYSQL_PASSWORD: Passw0rd!
+      - image: redis
     working_directory: ~/laravel # directory where steps will run
     steps: # a set of executable commands
       - checkout # special step to check out source code to working directory
-      - run: sudo apt install -y libsqlite3-dev zlib1g-dev
-      - run: sudo docker-php-ext-install zip
+      - run: sudo apt install -y gnupg2 libjpeg-dev libpng-dev libsqlite3-dev zlib1g-dev
+      - run: sudo -E docker-php-ext-configure gd --with-gd --with-jpeg-dir --with-png-dir --with-zlib-dir
+      - run: sudo -E docker-php-ext-install gd intl pdo_mysql zip
+      - run: sudo bash -c "yes '' | pecl install redis"
+      - run: sudo -E docker-php-ext-enable opcache redis
       - run: sudo composer self-update
+      - run:
+          name: Wait for DB
+          # preinstalled in circleci/* docker image
+          command: dockerize -wait tcp://127.0.0.1:3306 -timeout 120s
+      - run:
+          name: Wait for Redis to receive connections
+          command: dockerize -wait tcp://localhost:6379 -timeout 20s
       - restore_cache: # special step to restore the dependency cache if `composer.lock` does not change
           keys:
             - composer-v1-{{ checksum "composer.lock" }}
@@ -20,18 +37,19 @@ jobs: # a collection of steps
           key: composer-v1-{{ checksum "composer.lock" }}
           paths:
             - vendor
-      - restore_cache: # special step to restore the dependency cache if `package.json` does not change
+      - restore_cache: # special step to restore the dependency cache if `yarn.lock` does not change
           keys:
-            - node-v1-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found (See https://circleci.com/docs/2.0/caching/)
+            # when lock file changes, use increasingly general patterns to restore cache
+            - node-v1-{{ .Branch }}-{{ checksum "package-lock.json" }}
+            - node-v1-{{ .Branch }}-
             - node-v1-
-      - run: yarn install
-      - save_cache: # special step to save the dependency cache with the `package.json` cache key template
-          key: node-v1-{{ checksum "package.json" }}
+      - run: npm install
+      - save_cache:
+          key: node-v1-{{ .Branch }}-{{ checksum "package-lock.json" }}
           paths:
             - node_modules
       - run: touch database/database.sqlite
-      - run: php artisan migrate
+      - run: php artisan migrate --force
       - run:
           command: |
             ./lint.sh
