--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,30 @@
 {
-    "name": "laravel/laravel",
+    "name": "wifidog/wifidog-auth-laravel",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "Rework wifidog-auth by Laravel",
     "keywords": [
         "framework",
         "laravel"
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2",
+        "ext-json": "*",
+        "ext-redis": "*",
         "doctrine/dbal": "^2.9",
-        "eusonlito/laravel-meta": "^3.1",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
-        "sinkcup/laravel-make-auth-socialite": "^4.1.0",
-        "webcraft/laravel-random": "^1.0"
+        "sinkcup/laravel-ui-socialite": "^5.0.4"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
-        "beyondcode/laravel-dump-server": "^1.0",
-        "filp/whoops": "^2.0",
+        "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5",
+        "php-mock/php-mock": "^2.1",
+        "phpunit/phpunit": "^8.0",
         "squizlabs/php_codesniffer": "^3.4"
     },
     "config": {
@@ -56,7 +56,10 @@
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
+            "@php -r \"file_exists('.git') && copy('.git-pre-commit', '.git/hooks/pre-commit') && chmod('.git/hooks/pre-commit', 0755);\"",
+            "@php artisan package:discover --ansi",
+            "if (php artisan | grep 'ide-helper:generate'); then php artisan ide-helper:generate; fi",
+            "if (php artisan | grep 'ide-helper:meta'); then php artisan ide-helper:meta; fi"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
