--- a/.dockerignore
+++ b/.dockerignore
@@ -1,14 +1,15 @@
 .env
-.gitignore
 .git/
 .idea/
-bootstrap/cache/*
+bootstrap/cache/*.php
 database/*.sqlite
 laradock/
 node_modules/
 storage/app/*
-storage/framework/cache/*
+storage/framework/cache/data/*
+!storage/framework/cache/data/.gitignore
 storage/framework/sessions/*
-storage/framework/views/*
+!storage/framework/sessions/.gitignore
+storage/framework/views/*.php
 storage/logs/*
 vendor/
