perf: update composer packages

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,15 +1,15 @@
 .env
+**/.gitignore
 .git/
 .idea/
-bootstrap/cache/*.php
+bootstrap/cache/*
 database/*.sqlite
 laradock/
 node_modules/
-storage/app/*
+storage/app/public/*
 storage/framework/cache/data/*
-!storage/framework/cache/data/.gitignore
 storage/framework/sessions/*
-!storage/framework/sessions/.gitignore
-storage/framework/views/*.php
+storage/framework/testing/*
+storage/framework/views/*
 storage/logs/*
 vendor/
