--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2 # use CircleCI 2.0
 jobs: # a collection of steps
   build: # runs not using Workflows must have a `build` job as entry point
     docker: # run the steps with Docker
-      - image: circleci/php:7.3-node-browsers # ...with this image as the primary container; this is where all `steps` will run
+      - image: circleci/php:8.0-node-browsers # ...with this image as the primary container; this is where all `steps` will run
       - image: circleci/mysql:8.0
         command: [--default-authentication-plugin=mysql_native_password]
         environment:
@@ -15,7 +15,7 @@ jobs: # a collection of steps
     steps: # a set of executable commands
       - checkout # special step to check out source code to working directory
       - run: sudo apt install -y gnupg2 libjpeg-dev libpng-dev libsqlite3-dev zlib1g-dev
-      - run: sudo -E docker-php-ext-configure gd --with-gd --with-jpeg-dir --with-png-dir --with-zlib-dir
+      - run: sudo -E docker-php-ext-configure gd
       - run: sudo -E docker-php-ext-install gd intl pdo_mysql zip
       - run: sudo bash -c "yes '' | pecl install redis"
       - run: sudo -E docker-php-ext-enable opcache redis
