--- a/.github/workflows/laravel-11.yml
+++ b/.github/workflows/laravel-11.yml
@@ -23,4 +23,10 @@ jobs:
       - name: PHPUnit
         run: |
           composer install
-          php artisan test
+          php artisan test --log-junit junit.xml
+
+      - name: Upload test results to Codecov
+        if: ${{ !cancelled() }}
+        uses: codecov/test-results-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
