--- a/.github/workflows/laravel-11.yml
+++ b/.github/workflows/laravel-11.yml
@@ -1,6 +1,8 @@
-name: laravel-11
+name: Laravel 11
 on:
   push:
+    paths-ignore:
+      - "**.md"
     branches:
       - main
   pull_request:
@@ -42,3 +44,6 @@ jobs:
         uses: codecov/codecov-action@v4
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
+      - name: Lint PHP
+        run: php artisan lint:code
