--- a/docker/etc/apache2/sites-available/laravel.conf
+++ b/docker/etc/apache2/sites-available/laravel.conf
@@ -11,10 +11,11 @@
     RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
     RewriteRule ^(.*)$ https://%1$1 [L,R=permanent]
 
-    # optional: redirect http to https
+    # optional: redirect domain url http to https
+    RewriteCond %{HTTP_HOST} ^.*\.[a-z].*
     RewriteCond %{HTTP:X-Forwarded-Proto} =http
     RewriteRule .* https://%{HTTP:Host}%{REQUEST_URI} [L,R=permanent]
- 
+
     # RewriteCond %{HTTP:Authorization} .
     # RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
