--- a/.github/workflows/laravel-11.yml
+++ b/.github/workflows/laravel-11.yml
@@ -70,4 +70,4 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: wifidog/wifidog-auth-laravel:latest,wifidog/wifidog-auth-laravel:${{ github.ref_name }}
+          tags: wifidog/wifidog-auth-laravel:debug
