--- a/.github/workflows/laravel-11.yml
+++ b/.github/workflows/laravel-11.yml
@@ -1,6 +1,8 @@
 name: Laravel 11
 on:
   push:
+    tags:
+      - v*
     paths-ignore:
       - "**.md"
     branches:
@@ -16,34 +18,60 @@ jobs:
     container:
       image: laravelfans/laravel:11-dev
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: GitHub Environment Variables Action
-        uses: FranzDiebold/github-env-vars-action@v2.1.0
-
-      - name: Prepare
+      -
+        name: Checkout
+        uses: actions/checkout@v4
+      -
+        name: Prepare
         run: |
           composer install
           npm install
           npm run build
-
-      - name: PHPUnit
+      -
+        name: PHPUnit
         env:
           XDEBUG_MODE: coverage
-        run: |
-          php artisan test
-
-      - name: Upload test results to Codecov
+        run: php artisan test
+      -
+        name: Upload test results to Codecov
         if: ${{ !cancelled() }}
         uses: codecov/test-results-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-
-      - name: Upload coverage to Codecov
+      -
+        name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-
-      - name: Lint PHP
+      -
+        name: Lint PHP
         run: php artisan lint:code
+      -
+        uses: hadolint/hadolint-action@v3.1.0
+
+  buildx:
+    if: startsWith(github.ref, 'refs/tags/v')
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Get Version from Tag
+        id: tagver
+        uses: ChrSchu90/GitTagSemanticVersion@v1.1
+      -
+        name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: wifidog/wifidog-auth-laravel:latest,wifidog/wifidog-auth-laravel:${{ steps.tagver.outputs.version }}
