--- a/.github/workflows/laravel-11.yml
+++ b/.github/workflows/laravel-11.yml
@@ -13,6 +13,7 @@ on:
 
 jobs:
   test:
+    if: ${{ ! startsWith(github.ref, 'refs/tags/') }}
     name: Test
     runs-on: ubuntu-latest
     container:
