ci: php artisan lint

--- a/.github/workflows/laravel-11.yml
+++ b/.github/workflows/laravel-11.yml
@@ -46,7 +46,7 @@ jobs:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       -
         name: Lint PHP
-        run: php artisan lint:code
+        run: php artisan lint
       -
         uses: hadolint/hadolint-action@v3.1.0
 
